<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">My Nanodegree Apps</string>
    <string name="spotify">SPOTIFY STREAMER</string>
    <string name="scores">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="xyz">XYZ READER</string>
    <string name="build_bigger">BUILD IT BIGGER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
</resources>
