<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.subhrajyoti.myappportfolio.MainActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_text"
        android:textSize="25sp"
        android:paddingBottom="25dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify"
            android:background="@color/buttonColor"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/spotifyButton"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores"
            android:background="@color/buttonColor"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/scoresButton"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:background="@color/buttonColor"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/libraryButton"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_bigger"
            android:background="@color/buttonColor"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/buildButton"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz"
            android:background="@color/buttonColor"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/xyzButton"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:background="@color/highlightButton"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/capstoneButton"/>

    </LinearLayout>
    </ScrollView>

</LinearLayout>
